GNOME Bugzilla – Bug 793356
Tab list misaligned
Last modified: 2018-08-03 21:26:26 UTC
Created attachment 368214 [details] screenshot I'm using the tab list instead of the tab bar in gnome web. /org/gnome/epiphany/ui/tabs-bar-position -> "left" Open browser Tabs are on the left from the window. While this is great (and should really be the standard for 16:9; 16:10 resolutions) there is a little problem. Some Items in the list are missaligned. It just looks like a tree-view without logic. For me the site of etcher alwas go way in. They should, no matter what, aligned to the left in here, since it is a list: https://developer.gnome.org/hig/stable/lists.html.de
I agree, that looks really bad. All of the tab labels should be left-aligned, except the new tab button and the tab menu should be centered. I wonder if anyone has tested tabs on the left in the past year or two.
How are they handled in ephy? I thought this is a gtk notebook where it is always fixed at center with no option to change it.
(In reply to Jan-Michael Brummer from comment #2) > How are they handled in ephy? I thought this is a gtk notebook where it is > always fixed at center with no option to change it. It is indeed a GtkNotebook. Is the label really forced to be centered? I admit that, after playing around a bit in GtkInspector, I was not immediately able to find a way to change that. Tabs on the left was originally intended to satisfy users who wanted a tabkit2-style extension, but it doesn't implement a hierarchy, so it didn't really take off. There almost no maintenance burden here, so no real reason to remove it; otherwise, I'd be tempted to get rid of it, since it does not seem very good.
Currently the new page is inserted with NULL as parameter for the tab label, therefore it does the fallback to the default behaviour. So i guess we can change it using a new custom tab label.
Created attachment 368512 [details] [review] Set halign depending on notebook position Actually my previous comment is wrong: Ephiphany already has a custom title widget. This patch hooks to position property and changes horizontal alignment depending on notebook position.
We need to revert this commit, as due to this change also the close button has switched position. I'll update my patch.
The following fix has been pushed: 89fce08 Revert "ephy-notebook: Set halign depending on notebook position"
Created attachment 368522 [details] [review] Revert "ephy-notebook: Set halign depending on notebook position" This reverts commit 6e23db528f5e80effbf667de70085eee74a116c6.
Created attachment 368523 [details] [review] Set hexpand depending on notebook position Updated version which keeps other elements in place. Please double check it and sorry for the inconvenience. Spotted the close button issue only with a very small page title.
It doesn't seem obviously broken, so I'm going to push it.
And short page titles ("Most Visited") look fine in the current version.
Review of attachment 368523 [details] [review]: ::: src/ephy-notebook.c @@ -710,3 +743,3 @@ hbox = gtk_box_new (GTK_ORIENTATION_HORIZONTAL, 6); gtk_widget_show (hbox); - gtk_widget_set_halign (hbox, GTK_ALIGN_CENTER); + gtk_widget_set_halign (hbox, GTK_ALIGN_FILL); I don't like this GTK_ALIGN_CENTER -> GTK_ALIGN_FILL change. There's now a big unsightly gap between the favicon and the page title for pages with small titles. What do you think?
The following fix has been pushed: 9f953dc Revert "ephy-notebook: Set hexpand depending on notebook position"
Created attachment 368863 [details] [review] Revert "ephy-notebook: Set hexpand depending on notebook position" This reverts commit 20fd550e59f8b9a4e0d4d268ecea47ff53dc4bda.
Reopening
-- GitLab Migration Automatic Message -- This bug has been migrated to GNOME's GitLab instance and has been closed from further activity. You can subscribe and participate further through the new bug through this link to our GitLab instance: https://gitlab.gnome.org/GNOME/epiphany/issues/456.