ephy-notebook: Set hexpand depending on notebook position

Horizontal expand is now set depending on notebook position. Left/Right are set to FALSE and bottom/top to TRUE.

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=793356